Refactored code and added swagger annotations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,18 @@ quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/foodjet
 quarkus.datasource.password=admin
 quarkus.datasource.username=admin
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
+quarkus.http.port=8082
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=update
 
 # SWAGGER / OPENAPI
 quarkus.swagger-ui.enable=true
-
-quarkus.http.port=8082
+quarkus.swagger-ui.path=/swagger-ui
+quarkus.swagger-ui.always-include=true
+quarkus.smallrye-openapi.path=/openapi
+quarkus.smallrye-openapi.operation-id-strategy=METHOD
+quarkus.smallrye-openapi.info-description=The API was created to manage the inventory at FoodJet
+quarkus.smallrye-openapi.info-title=Inventory API
+quarkus.smallrye-openapi.info-contact-email=luan_ribeiro@outlook.com
+quarkus.smallrye-openapi.info-contact-name=Luan Ribeiro API Support
